# LatinDiachronicDatabase

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: converter_benchmark.rs
cmd/frequential/: main.go
examples/: authors_json.rs  csv_lemmatizer.rs  lemlat_lemmatizer.rs  standard_conversion.rs
img/: query_system.viz
internal/backend/: authorHistorical.go  dictionarymap.go  frequential.go  writers.go
internal/server/: actions.go  actor.go  filteringCriteria.go  logger.go  routes.go  server.go
pkg/lword/: basic_lemmatizer.go  lemmatizer.go  lemmatizer_test.go  stemmer.go  stemmer_test.go  utils.go  utils_test.go
src/: lib.rs
src/arguments/: mod.rs
src/authors/: Cargo.toml
src/authors/src/: lib.rs
src/authors_chrono/: Cargo.toml  mod.rs  parsers.rs
src/authors_chrono/examples/: convert.rs
src/authors_chrono/src/: lib.rs  parsers.rs
src/csv/: Cargo.toml
src/csv/src/: main.rs
src/exporter/: Cargo.toml
src/exporter/src/: main.rs
src/filesystem/: mod.rs
src/graphql_queries/: Cargo.toml  context.rs  inputs.rs  mod.rs  stats.rs  types.rs
src/graphql_queries/src/: context.rs  inputs.rs  lib.rs  types.rs
src/interner/: Cargo.toml
src/interner/benches/: interner_benchmark.rs
src/interner/src/: lib.rs
src/intersection/: Cargo.toml
src/intersection/src/: main.rs
src/latin_lemmatizer/: Cargo.toml  compressed.rs  mod.rs
src/latin_lemmatizer/examples/: csv_lemmatizer.rs  lemlat_lemmatizer.rs
src/latin_lemmatizer/parsers/: csv_format.rs  error.rs  lemlat_format.rs
src/latin_lemmatizer/src/: lib.rs
src/latin_lemmatizer/src/parsers/: csv_format.rs  error.rs  lemlat_format.rs  mod.rs
src/latin_utilities/: Cargo.toml  mod.rs
src/latin_utilities/benches/: converter_benchmark.rs
src/latin_utilities/examples/: ipa_latin.rs  standard_conversion.rs  standard_conversion_arg.rs
src/latin_utilities/src/: ipa.rs  lib.rs  normalized_latin_string.rs
src/query_driver/: Cargo.toml  memory.rs  mod.rs  utils.rs
src/query_driver/src/: lib.rs  utils.rs
src/query_system/: Cargo.toml  gc.rs  ids.rs  lit_subset.rs  middle.rs  mock.rs  mod.rs  sources.rs  traits.rs  types.rs
src/query_system/snapshots/: latin_db__query_system__sources__tests__lorem_ipusm.snap  latin_db__query_system__sources__tests__notum_est_omnibus.snap  tests__lorem_ipusm.snap  tests__notum_est_omnibus.snap
src/query_system/src/: authors.rs  form_data.rs  forms.rs  ids.rs  lemmas.rs  lib.rs  lit_subset.rs  main_interner.rs  middle.rs  mock.rs  sources.rs  traits.rs  types.rs  utils.rs
src/query_system/src/snapshots/: tests__lorem_ipusm.snap  tests__notum_est_omnibus.snap
src/runner/: Cargo.toml
src/runner/src/: cli.yml  lib.rs  main.rs
src/single_query_bin/: Cargo.toml
src/single_query_bin/src/: main.rs
src/sources/: Cargo.toml
src/sources/src/: lib.rs
src/word_db/: Cargo.toml  mod.rs
src/word_db/src/: form_data.rs  forms.rs  ids.rs  interner.rs  lemmas.rs  lib.rs
src/writers/: Cargo.toml
src/writers/examples/: writer_runner.rs
src/writers/src/: lib.rs  main.rs
test/: stemmer_test.go
test/testdata/: joined.txt
