[package]
name = "latin_db"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
description = "Low level utilites to work with latin strings"

[dependencies]
salsa = "0.13"
shrinkwraprs = "0.2"
log = "0.4.8"
unicode-normalization = "0.1.8"
lazy_static = "1.3.0"
env_logger = "0.6.2"
color-backtrace = "0.2.3"
regex = "1.0"
walkdir = "2.2.9"
bimap = "0.4"
warp = "0.1.20"
juniper_warp = "0.5.2"
serde = "1.0"
serde_json = "1.0"
clap ={features = ["yaml"], version = "2.33.0"}
chrono = { version = "0.4", features = ["serde"] }
juniper = { version = "0.14.2", default-features = true, features = ["serde_json", "chrono"] }

[dev-dependencies]
proptest = "0.9.4"
insta = "0.11.0"
criterion = "0.2"
color-backtrace = "0.2.3"
structopt = "0.3.7"

[[bench]]
name = "converter_benchmark"
harness = false