[package]
name = "latin_db"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
description = "Low level utilites to work with latin strings"

[dependencies]
salsa = "0.14.1"
shrinkwraprs = "0.3"
log = "0.4.8"
unicode-normalization = "0.1.12"
lazy_static = "1.4.0"
env_logger = "0.8.1"
color-backtrace = "0.4.2"
regex = "1.3.7"
walkdir = "2.3.1"
bimap = "0.5"
warp = "0.1.8"
juniper_warp = "0.5.2"
serde = "1.0"
serde_json = "1.0"
derivative = "2.1.1"
systemstat = "0.1.5"
clap ={features = ["yaml"], version = "2.33.1"}
chrono = { version = "0.4", features = ["serde"] }
juniper = { version = "0.15.0", default-features = true, features = ["serde_json", "chrono"] }

[dev-dependencies]
proptest = "0.9.6"
insta = "1.1.0"
criterion = "0.3.2"
structopt = "0.3.14"

[[bench]]
name = "converter_benchmark"
harness = false
