[package]
name = "authors_chrono"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.8", features = ["serde"] }
regex = "1.2.1"

[dev-dependencies]
clap = "2.33"
serde_json = "1.0"