[package]
name = "authors_chrono"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.3.1"

[dev-dependencies]
structopt = "0.3.1"
serde_json = "1.0"