[package]
name = "csv"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
latin_utilities = { version = "0.1", path = "../latin_utilities" }
query_system = { version = "0.1", path = "../query_system" }
authors_chrono = { version = "0.1", path = "../authors_chrono" }
query_driver = { version = "0.1", path = "../query_driver"}
runner = { version = "0.1", path = "../runner"}
log = "0.4.8"
env_logger = "0.7.1"
color-backtrace = "0.3.0"