[package]
name = "query_driver"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
description = "System in charge of initializing the query system, so that the GraphQL client can operate"

[dependencies]
query_system = { version = "0.1.0", path = "../query_system"}
latin_lemmatizer = { version = "0.1.0", path = "../latin_lemmatizer"}
authors_chrono = { version = "0.1.0", path = "../authors_chrono"}
salsa = "0.12"
walkdir = "2"
bimap = "0.3"