[package]
name = "query_system"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
description = "High level description of the queries available"

[dependencies]
salsa = "0.13"
shrinkwraprs = "0.2"
latin_utilities = { version = "0.1", path = "../latin_utilities" }
latin_lemmatizer = { version = "0.1", path = "../latin_lemmatizer" }
authors_chrono = { version = "0.1", path = "../authors_chrono" }
log = "0.4.8"

[dev-dependencies]
proptest = "0.9.4"
insta = "0.11.0"
