[package]
name = "runner"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
description = "Final executable result"

[dependencies]
query_driver = { version = "0.1.0", path = "../query_driver"}
query_system = { version = "0.1.0", path = "../query_system"}
graphql_queries = { version = "0.1.0", path = "../graphql_queries"}
salsa = "0.13"
warp = "0.1.20"
juniper_warp = "0.5.2"
log = "0.4.8"
env_logger = "0.7.1"
color-backtrace = "0.3.0"
clap ={features = ["yaml"], version = "2.33.0"}